--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <title>Paradise Valley</>
+       <title>Paradise Valley</title>
     </head>
     <body>
-        <!-- the content goes here -->
+        <p>Welcome to Paradise Valley</p>
     </body>
 </html>
